--- a/Podstawy HTML i CSS/warmup/style.css
+++ b/Podstawy HTML i CSS/warmup/style.css
@@ -10,6 +10,10 @@
     margin: 0 auto;
 }
 
+.submit:hover, .confirm:hover, .cancel:hover {
+    background-color: white;
+}
+
 .submit {
     background-color: rgba(224, 187, 18, 0.65);
     border-color: rgba(224, 187, 18, 0.95);
