--- a/Podstawy HTML i CSS/cards/style.css
+++ b/Podstawy HTML i CSS/cards/style.css
@@ -50,12 +50,49 @@
   #root, #__next {
     isolation: isolate;
   }
+  /* font-family: 'Lexend Deca', sans-serif; */
+  /* font-family: 'Big Shoulders Display', cursive; */
   body {
     font-size: 15px;
+    font-family: ;
+    color: ;
   }
 
-p {
-font-size: 15px;
-}
+  p {
+    color: hsla(0, 0%, 100%, 0.75);
+  }
   
+  .heading {
+    color: hsl(0, 0%, 95%);
+  }
+
+  .sections-container {
+    display: flex;
+    gap: 2rem;
+  }
+  section {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    align-items: center;
+  }
+
+  .sedan {
+    background-color: hsl(31, 77%, 52%);
+  }
+  
+  .suv {
+    background-color: hsl(184, 100%, 22%);
+  }
+
+  .luxury {
+    background-color: hsl(179, 100%, 13%);
+  }
+  
+  button {
+    background-color: hsl(0, 0%, 95%);
+    border-radius: 20px;
+    width: 100px;
+    margin-bottom: 30px;
+  }
 
