--- a/Podstawy HTML i CSS/cards/style.css
+++ b/Podstawy HTML i CSS/cards/style.css
@@ -22,13 +22,13 @@ body {
 
 .cards {
 	display: flex;
-	max-width: 1200px;
+	max-width: 900px;
 	border-radius: 10px;
 	overflow: hidden;
 }
 
 .card {
-	padding: 2em;
+	padding: 3em;
 }
 
 .sedans {
@@ -45,24 +45,40 @@ body {
 
 h2 {
 	margin: 1em 0;
+	color: hsl(0, 0%, 95%);
 	font-family: 'Big Shoulders Display', cursive;
 	font-size: 2rem;
 	text-transform: uppercase;
 }
 
 p {
+	color: hsla(0, 0%, 100%, 0.75);
 	line-height: 1.5rem;
 }
 
 button {
-	margin-top: 4em;
-	padding: 0.6em 1.2em;
+	margin-top: 5em;
+	padding: 1em 2em;
 	background-color: hsl(0, 0%, 95%);
 	border: 1px solid hsl(0, 0%, 95%);
-	border-radius: 15px;
+	border-radius: 25px;
 	font-family: 'Lexend Deca', sans-serif;
 	cursor: pointer;
 }
+
+.sedans-btn {
+	color: hsl(31, 77%, 52%);
+}
+
+.suvs-btn {
+	color: hsl(184, 100%, 22%);
+}
+
+.luxury-btn {
+	color: hsl(179, 100%, 13%);
+}
+
+/* ATTRIBUTION */
 
 .attribution {
 	margin-top: 200px;
