--- a/Podstawy HTML i CSS/cards/style.css
+++ b/Podstawy HTML i CSS/cards/style.css
@@ -43,33 +43,12 @@ body {
   color: hsl(31, 77%, 52%);
 }
 
-.btn-sedans:hover {
-  background-color: hsl(31, 77%, 52%);
-  color: hsl(0, 0%, 95%);
-  border: 1px solid hsl(0, 0%, 95%);
-  cursor: pointer;
-}
-
 .btn-suvs {
   color: hsl(184, 100%, 22%);
 }
 
-.btn-suvs:hover {
-  background-color: hsl(184, 100%, 22%);
-  color: hsl(0, 0%, 95%);
-  border: 1px solid hsl(0, 0%, 95%);
-  cursor: pointer;
-}
-
 .btn-luxury {
   color: hsl(179, 100%, 13%);
-}
-
-.btn-luxury:hover {
-  background-color: hsl(179, 100%, 13%);
-  color: hsl(0, 0%, 95%);
-  border: 1px solid hsl(0, 0%, 95%);
-  cursor: pointer;
 }
 
 .sedans {
@@ -90,6 +69,29 @@ body {
 
 .icon {
   margin-left: 20px;
+}
+
+@media (hover: hover) {
+  .btn-sedans:hover {
+    background-color: hsl(31, 77%, 52%);
+    color: hsl(0, 0%, 95%);
+    border: 1px solid hsl(0, 0%, 95%);
+    cursor: pointer;
+  }
+
+  .btn-suvs:hover {
+    background-color: hsl(184, 100%, 22%);
+    color: hsl(0, 0%, 95%);
+    border: 1px solid hsl(0, 0%, 95%);
+    cursor: pointer;
+  }
+
+  .btn-luxury:hover {
+    background-color: hsl(179, 100%, 13%);
+    color: hsl(0, 0%, 95%);
+    border: 1px solid hsl(0, 0%, 95%);
+    cursor: pointer;
+  }
 }
 
 @media screen and (max-width: 375px) {
