--- a/Layout w HTML i CSS/warmup/flexbox/style.css
+++ b/Layout w HTML i CSS/warmup/flexbox/style.css
@@ -1,8 +1,8 @@
-.wrapper {
+body {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 200px;
+  height: 100vh;
 }
 
 .inner_wrapper {
