--- a/Layout w HTML i CSS/product_page/style.css
+++ b/Layout w HTML i CSS/product_page/style.css
@@ -4,19 +4,26 @@
   box-sizing: border-box;
 }
 
-.wrapper {
-  max-width: 1440px;
-  padding: 50px;
+:root {
+  font-family: "Kumbh Sans", sans-serif;
+  font-size: 62.5%;
 }
 
 header {
   display: flex;
-  width: 100%;
+  width: 80vw;
+  max-width: 1200px;
   justify-content: space-between;
+  align-items: center;
+  margin: 0 auto;
+  padding: 40px 0;
+  font-size: 1.8rem;
+  border-bottom: 1px solid grey;
 }
 
 nav {
   display: flex;
+  margin-right: auto;
 }
 
 ul {
@@ -24,10 +31,33 @@ ul {
   list-style: none;
   justify-content: flex-end;
 }
+
+li {
+  margin-left: 2rem;
+  color: hsl(219, 9%, 45%);
+}
+
+.avatar {
+  background: url(/images/image-avatar.png);
+  width: 60px;
+  height: 60px;
+  background-size: contain;
+}
+
 .logo {
   justify-content: flex-start;
+  margin-right: 55px;
 }
-.basket-avatar {
+.cart-avatar {
   display: flex;
   justify-content: flex-end;
+  align-items: center;
+}
+
+.cart {
+  margin-right: 3rem;
+  background: url(/images/icon-cart.svg);
+  width: 30px;
+  height: 30px;
+  background-size: contain;
 }
