--- a/Layout w HTML i CSS/product_page/style.css
+++ b/Layout w HTML i CSS/product_page/style.css
@@ -1,20 +1,65 @@
-*{
-margin: 0;
-padding: 0;
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
+.wrapper {
+	max-width: 1000px;
+	width: 90%;
+	margin: 0 auto;
+	font-family: "Kumbh Sans", sans-serif;
+	color: hsl(219, 9%, 45%);
+	font-size: 16px;
 }
 
-.main-picture img {
-    max-width: 400px;
-    
-    
+.container {
+	display: flex;
+	align-items: center;
+	width: 100%;
+	border-bottom: 1px solid hsl(220, 14%, 75%);
+	padding: 30px 0;
+	margin-bottom: 30px;
+}
+.navigation {
+	margin: 0 auto 0 50px;
+}
+.nav-links {
+	display: flex;
+	gap: 25px;
+}
+.nav-links li {
+	list-style: none;
+}
+.nav-links li a {
+	text-decoration: none;
+	color: hsl(219, 9%, 45%);
+}
+.ikons {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	width: 100px;
+}
+
+.avatar {
+	height: 40px;
+	width: 40px;
+}
+/* .basket {
+	height: 20px;
+	width: 20px;
+} */
+
+/* .main-picture img {
+    max-width: 400px;  
 }
 .picture {
     max-width: 250px;
 }
- .secondary-pictures {
+ .cards-pictures {
     display: flex;
     gap: 0.4rem;
-}
+} */
 
 /* .picture:first-child {
     background-image: url(./images/image-product-1.jpg);
@@ -23,36 +68,3 @@ padding: 0;
     background-repeat: no-repeat;
 
 }   */
-
-/* .main {
-    display: flex;
-} */
-
-.menu {
-list-style: none;
-
-}
-li{
-    display: inline-block;
-}
-.navigation {
-    display: inline-block;
-}
-.ikons {
-    position: relative;
-    right: 100px;
-}
-.avatar {
-    height: 35px;
-    width: 35px;
-}
-.basket {
-    height: 20px;
-    width: 20px;
-    
-}
-
-
-.description {
-    font-family: 'Kumbh Sans', sans-serif;
-}
