--- a/Layout w HTML i CSS/product_page/style.css
+++ b/Layout w HTML i CSS/product_page/style.css
@@ -18,7 +18,7 @@ header {
   margin: 0 auto;
   padding: 40px 0;
   font-size: 1.8rem;
-  border-bottom: 1px solid grey;
+  border-bottom: 0.5px solid hsl(219, 9%, 45%);
 }
 
 nav {
@@ -39,8 +39,8 @@ li {
 
 .avatar {
   background: url(/images/image-avatar.png);
-  width: 60px;
-  height: 60px;
+  width: 50px;
+  height: 50px;
   background-size: contain;
 }
 
@@ -48,6 +48,7 @@ li {
   justify-content: flex-start;
   margin-right: 55px;
 }
+
 .cart-avatar {
   display: flex;
   justify-content: flex-end;
@@ -57,7 +58,57 @@ li {
 .cart {
   margin-right: 3rem;
   background: url(/images/icon-cart.svg);
-  width: 30px;
-  height: 30px;
+  width: 20px;
+  height: 20px;
   background-size: contain;
+  background-repeat: no-repeat;
+  margin: 0 4rem;
+}
+
+main {
+  display: flex;
+  margin: 10rem auto;
+  width: 70vw;
+}
+
+.gallery {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(2, auto);
+  width: 445px;
+  gap: 30px;
+}
+
+.gallery img:nth-child(1) {
+  grid-column: 1 / span 4;
+  grid-row: 1 / span 1;
+  width: 100%;
+}
+.gallery img:nth-child(2) {
+  grid-column: 1 / span 1;
+  grid-row: 2 / span 1;
+}
+.gallery img:nth-child(3) {
+  grid-column: 2 / span 1;
+  grid-row: 2 / span 1;
+}
+.gallery img:nth-child(4) {
+  grid-column: 3 / span 1;
+  grid-row: 2 / span 1;
+}
+.gallery img:nth-child(5) {
+  grid-column: 4 / span 1;
+  grid-row: 2 / span 1;
+}
+
+.thumbnail {
+  width: 85px;
+}
+
+.gallery img {
+  border-radius: 12px;
+}
+
+.description {
+  padding-left: 13rem;
 }
