--- a/Layout w HTML i CSS/product_page/style.css
+++ b/Layout w HTML i CSS/product_page/style.css
@@ -4,7 +4,7 @@
 	box-sizing: border-box;
 }
 .wrapper {
-	max-width: 1200px;
+	max-width: 1100px;
 	width: 90%;
 	margin: 0 auto;
 	font-family: "Kumbh Sans", sans-serif;
@@ -18,14 +18,14 @@
 	width: 100%;
 	border-bottom: 1px solid hsl(220, 14%, 75%);
 	padding: 30px 0;
-	margin-bottom: 50px;
+	margin-bottom: 54px;
 }
 .navigation {
-	margin: 0 auto 0 50px;
+	margin: 0 auto 0 53px;
 }
 .nav-links {
 	display: flex;
-	gap: 25px;
+	gap: 30px;
 }
 .nav-links li {
 	list-style: none;
@@ -38,7 +38,7 @@
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
-	width: 100px;
+	width: 110px;
 }
 
 .avatar {
@@ -51,60 +51,82 @@
 }
 
 .pictures {
-	max-width: 600px;
-	padding: 25px;
+	width: 50%;
+	padding: 40px;
 }
 .description {
 	width: 50%;
-	padding: 50px;
+	padding: 60px 30px 60px 60px;
 }
 .main-picture img {
-	max-width: 450px;
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
 	border-radius: 10px;
 }
 
 .cards-pictures {
 	display: flex;
 	justify-content: space-between;
-	max-width: 450px;
+	gap: 20px;
+	/* width: 100%; */
 	margin-top: 20px;
 }
 .picture img {
-	max-width: 100px;
+	width: 100%;
 	border-radius: 10px;
 }
+.picture img:active {
+	opacity: 0;
+	border: 2px solid hsl(26, 100%, 55%);
+}
+.picture img:hover {
+	border: 2px solid hsl(26, 100%, 55%);
+	opacity: 0.4;
+}
+
 .description h3 {
 	color: hsl(26, 100%, 55%);
 	text-transform: uppercase;
-	padding: 30px 0;
+	font-size: 14px;
+	letter-spacing: 1px;
+	padding: 45px 0 16px 0;
 }
 .description h1 {
 	color: hsl(220, 13%, 13%);
-	font-size: 40px;
-	font-weight: 7--;
+	font-size: 44px;
+	font-weight: 700;
+	line-height: 1.1;
 }
 .description p {
-	padding: 30px 0;
-	line-height: 1.5;
+	padding: 32px 0 25px 0;
+	line-height: 1.6;
 }
 
+.price {
+	display: flex;
+	align-items: center;
+}
 .price strong {
 	color: hsl(220, 13%, 13%);
-	font-size: 22px;
+	font-size: 30px;
 }
 .discount {
 	color: hsl(26, 100%, 55%);
 	background-color: hsl(25, 100%, 94%);
 	font-weight: 700;
 	margin-left: 20px;
+	padding: 4px 10px;
+	border-radius: 8px;
 }
 .description del {
 	display: inline-block;
-	padding: 16px 0;
+	padding: 8px 0;
 }
 .btn {
 	display: flex;
 	gap: 20px;
+	padding: 30px 0;
 }
 
 .amount {
@@ -112,7 +134,7 @@
 	align-items: center;
 	justify-content: space-around;
 	flex-grow: 1;
-	padding: 15px;
+	padding: 20px;
 	background-color: hsl(223, 64%, 98%);
 	border: 0;
 	border-radius: 10px;
@@ -135,10 +157,11 @@ input::placeholder {
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	gap: 20px;
-	flex-grow: 2;
+	gap: 14px;
+	flex-grow: 3;
 	border-radius: 10px;
 	border: 0;
+	box-shadow: 0 15px 20px 0px hsl(25, 100%, 94%);
 }
 .basket path {
 	height: 20px;
@@ -147,4 +170,5 @@ input::placeholder {
 }
 .submit span {
 	font-weight: 700;
+	font-size: 16px;
 }
