--- a/Layout w HTML i CSS/product_page/style.css
+++ b/Layout w HTML i CSS/product_page/style.css
@@ -17,8 +17,13 @@ header {
   align-items: center;
   margin: 0 auto;
   padding: 40px 0;
-  font-size: 1.8rem;
+  font-size: 1.6rem;
   border-bottom: 0.5px solid hsl(219, 9%, 45%);
+}
+
+header a {
+  text-decoration: none;
+  color: hsl(219, 9%, 45%);
 }
 
 nav {
@@ -33,8 +38,7 @@ ul {
 }
 
 li {
-  margin-left: 2rem;
-  color: hsl(219, 9%, 45%);
+  margin-left: 1.6rem;
 }
 
 .avatar {
@@ -67,42 +71,35 @@ li {
 
 main {
   display: flex;
+  justify-content: space-between;
   margin: 10rem auto;
-  width: 70vw;
+  width: 75vw;
+  max-width: 1100px;
 }
 
 .gallery {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(2, auto);
-  width: 445px;
+  display: flex;
+  flex-direction: column;
   gap: 30px;
+  width: 45%;
 }
 
-.gallery img:nth-child(1) {
-  grid-column: 1 / span 4;
-  grid-row: 1 / span 1;
+.main-image {
   width: 100%;
 }
-.gallery img:nth-child(2) {
-  grid-column: 1 / span 1;
-  grid-row: 2 / span 1;
-}
-.gallery img:nth-child(3) {
-  grid-column: 2 / span 1;
-  grid-row: 2 / span 1;
-}
-.gallery img:nth-child(4) {
-  grid-column: 3 / span 1;
-  grid-row: 2 / span 1;
-}
-.gallery img:nth-child(5) {
-  grid-column: 4 / span 1;
-  grid-row: 2 / span 1;
+
+.thumbnails {
+  display: grid;
+  gap: 30px;
+  grid-template-columns: repeat(auto-fill, minmax(80px, 1fr));
+  justify-items: center;
+  grid-auto-columns: 170px;
+  width: 100%;
 }
 
 .thumbnail {
-  width: 85px;
+  width: 100%;
+  background-color: white;
 }
 
 .gallery img {
@@ -110,5 +107,108 @@ main {
 }
 
 .description {
-  padding-left: 13rem;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin-left: 12rem;
+  padding-top: 6rem;
+  width: 50%;
+}
+
+.brand-name {
+  font-size: 1.4rem;
+  font-weight: 900;
+  letter-spacing: 0.2rem;
+  color: hsl(26, 100%, 55%);
+  margin-bottom: 2rem;
+}
+
+h1 {
+  font-size: 4.5rem;
+  margin-bottom: 3rem;
+}
+
+.product-description {
+  font-size: 1.6rem;
+  color: hsl(219, 9%, 45%);
+  margin-bottom: 3rem;
+}
+
+.new-price {
+  font-size: 2.5rem;
+  font-weight: 700;
+}
+
+.discount {
+  display: inline-block;
+  color: hsl(26, 100%, 55%);
+  background-color: hsl(25, 100%, 94%);
+  font-size: 1.5rem;
+  height: 2.5rem;
+  width: 4rem;
+  line-height: 2.5rem;
+  text-align: center;
+  margin: 1rem;
+  position: relative;
+  bottom: 3px;
+}
+
+.old-price {
+  font-size: 1.6rem;
+  color: hsl(220, 14%, 75%);
+  margin-bottom: 3rem;
+  font-weight: 700;
+}
+
+.counter-button {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  width: 160px;
+  height: 55px;
+  background-color: hsl(223, 64%, 98%);
+  border-radius: 12px;
+  margin: 0 2rem 2rem 0;
+}
+
+.buttons {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.counter {
+  border: none;
+  width: 10px;
+  background-color: transparent;
+}
+
+.counter::placeholder {
+  font-size: 1.6rem;
+  font-weight: bold;
+}
+
+.add-to-cart {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 270px;
+  height: 55px;
+  border: none;
+  border-radius: 12px;
+  background-color: hsl(26, 100%, 55%);
+  color: white;
+  font-size: 1.6rem;
+  font-weight: 900;
+}
+
+.button-cart {
+  width: 18px;
+  height: 18px;
+  margin-right: 2rem;
+}
+
+.thumbnail:hover,
+.add-to-cart:hover {
+  border: 2px solid hsl(26, 100%, 55%);
+  filter: opacity(50%);
 }
