--- a/Podstawy HTML i CSS/preview/style.css
+++ b/Podstawy HTML i CSS/preview/style.css
@@ -6,26 +6,98 @@
 	padding: 0;
 }
 
-body {
-	background-color: hsl(233, 47%, 7%);
-	color: hsl(0, 0%, 100%);
-	font-family: 'Inter', sans-serif;
-	font-family: 'Lexend Deca', sans-serif;
+html {
 	font-size: 15px;
 }
 
+body {
+	position: relative;
+	height: 100vh;
+	background-color: hsl(233, 47%, 7%);
+	color: hsl(0, 0%, 100%);
+	font-family: 'Inter', sans-serif;
+}
+
 .card {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	width: 90%;
+	max-width: 1000px;
+	transform: translate(-50%, -50%);
+	display: flex;
 	background-color: hsl(244, 38%, 16%);
+	border-radius: 10px;
+	overflow: hidden;
 }
 
-/* ATTRIBUTION */
-
-.attribution {
-	font-size: 11px;
-	text-align: center;
+.card__text {
+	width: 50%;
+	padding: 4em;
 }
-.attribution a {
-	color: hsl(228, 45%, 44%);
+
+.card__hero {
+	width: 50%;
+	background-image: linear-gradient(hsla(277, 64%, 61%, 40%), hsla(277, 64%, 61%, 40%)),
+		url(./images/image-header-desktop.jpg);
+	background-size: cover;
+}
+
+span {
+	color: hsl(277, 64%, 61%);
+}
+
+.card__text > p {
+	margin: 2em 0;
+	color: hsla(0, 0%, 100%, 0.75);
+	line-height: 2rem;
+}
+
+.card__stats {
+	display: flex;
+	gap: 3em;
+	margin-top: 4em;
+}
+
+.card__counter {
+	font-size: 1.5rem;
+	font-weight: 700;
+}
+
+.card__label {
+	margin-top: 1em;
+	color: hsla(0, 0%, 100%, 0.6);
+	font-size: 0.8rem;
+	font-family: 'Lexend Deca', sans-serif;
+	text-transform: uppercase;
+	letter-spacing: 0.1rem;
 }
 
 /* MEDIA QUERIES */
+
+@media (max-width: 576px) {
+	.card {
+		flex-direction: column-reverse;
+	}
+	.card__text,
+	.card__hero {
+		width: 100%;
+	}
+
+	.card__hero {
+		height: 300px;
+	}
+
+	.card__text {
+		padding: 3em 2em;
+		text-align: center;
+	}
+
+	.card__text > p {
+		margin: 1.5em 0;
+	}
+
+	.card__stats {
+		flex-direction: column;
+	}
+}
